[package]
authors = ["Vivian Hellyer <vivian@hellyer.dev>"]
description = "Utility crate for twilight-rs to mention model types."
documentation = "https://rarity.cascadia.cafe/rarity_mention/index.html"
edition = "2018"
homepage = "https://github.com/rarity-rs/mention"
include = ["src/*.rs", "Cargo.toml", "README.md"]
keywords = ["twilight"]
license = "ISC"
name = "rarity-mention"
publish = false
repository = "https://github.com/rarity-rs/mention.git"
readme = "README.md"
version = "0.1.0"

[dependencies]
twilight-model = { branch = "trunk", default-features = false, git = "https://github.com/twilight-rs/twilight" }
